# kaiju-secure-messaging

./: .gitignore  Cargo.toml  README.md  SETUP.md
src/: crypto.rs  error.rs  lib.rs  message.rs  protocol.rs  transport.rs
tests/: integration_test.rs
