[package]
name = "kaiju-secure-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ring = "0.17"
argon2 = "0.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
anyhow = "1.0"
dirs = "5.0"
crossterm = "0.28"
colored = "2.1"
if-addrs = "0.13"
rpassword = "7.3"

[[bin]]
name = "bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "remote"
path = "src/bin/remote.rs"

[dev-dependencies]
tempfile = "3.14"